header section implemented

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <nav class="header_navigation nav">
                 <div class="nav__logo-wrapper logo">
-                    <svg class="logo__icon">
+                    <svg class="logo__icon" aria-label="header link">
                         <use href="assets/sprites.svg#logo-icon"></use>
                     </svg>
                     <a class="logo__link">Lasles<span>VPN</span></a>
@@ -45,11 +45,51 @@
                 </div>
 
                 <div class="nav__sign">
-                    <a href="#" class="nav__sign-link">Sign In</a>
+                    <a href="#" class="nav__sign-link" aria-label="sign in link">Sign In</a>
                     <button class="nav__sign-button">Sign Up</button>
                 </div>
             </nav>
         </div>
     </header>
+
+    <div class="mob-navigation">
+        <label for="checkboxID" class="mob-navigation__open">
+            <svg class="mob-navigation__open-icon">
+                <use href="assets/sprites.svg#burger-icon"></use>
+            </svg>
+        </label>
+
+        <input type="checkbox" id="checkboxID" class="mob-navigation__toggler">
+
+        <nav class="mob-navigation__menu nav">
+            <div class="nav__sign">
+                <a href="#" class="nav__sign-link" aria-label="sign in link">Sign In</a>
+                <button class="nav__sign-button">Sign Up</button>
+            </div>
+            <ul class="nav__list">
+                <li class="nav__list-item" >
+                    <a href="#" class="nav__list-item-link">About</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#" class="nav__list-item-link">Features</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#" class="nav__list-item-link">Pricing</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#" class="nav__list-item-link">Testimonials</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#" class="nav__list-item-link">Help</a>
+                </li>
+            </ul>
+
+            <label for="checkboxID" class="mob-navigation__close">
+                <svg class="mob-navigation__close-icon">
+                    <use href="assets/sprites.svg#cross-icon"></use>
+                </svg>
+            </label>
+        </nav>
+    </div>
   </body>
 </html>
