--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="statistic">
             <div class="statistic__user">
                 <div class="statistic__user-left statistic-left">
-                    <svg class="statistic__user-left-icon">
+                    <svg class="statistic__user-left-icon" aria-label="user icon">
                         <use href="assets/sprites.svg#user-icon"></use>
                     </svg>
                 </div>
@@ -131,7 +131,7 @@
 
                 <div class="statistic__location">
                     <div class="statistic__location-left statistic-left">
-                        <svg class="statistic__location-left-icon">
+                        <svg class="statistic__location-left-icon" aria-label="location icon">
                             <use href="assets/sprites.svg#location-icon"></use>
                         </svg>
                     </div>
@@ -143,7 +143,7 @@
 
                     <div class="statistic__server">
                         <div class="statistic__server-left statistic-left">  
-                            <svg class="statistic__server-left-icon">
+                            <svg class="statistic__server-left-icon" aria-label="server icon">
                                 <use href="assets/sprites.svg#server-icon"></use>
                             </svg>
                         </div>
@@ -151,10 +151,28 @@
                             <h2 class="statistic__server-right-title statistic-title">50+</h2>
                             <p class="statistic__server-right-desc statistic-desc">Servers</p>
                         </div>
-                        
                     </div>
         </div>
       </div>
     </section>
+
+    <section class="features-section" aria-label=" features section">
+      <div class="container">
+        <div class="features">
+          <div class="features__bg"></div>
+          <div class="features__points">
+            <h3 class="features__points-title">We Provide Many Features You Can Use</h3>
+            <p class="features__points-desc">You can explore the features that we provide with fun and have their own functions each feature.</p>
+            <ul class="features__points-list">
+              <li class="features__points-list-item">Powerfull online protection.</li>
+              <li class="features__points-list-item">Internet without borders.</li>
+              <li class="features__points-list-item">Supercharged VPN.</li>
+              <li class="features__points-list-item">No specific time limits.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
