--- a/index.html
+++ b/index.html
@@ -117,41 +117,48 @@
     <section class="statistic-section" aria-label="statistic section">
       <div class="container">
         <div class="statistic">
-            <div class="statistic__user">
-                <div class="statistic__user-left statistic-left">
-                    <svg class="statistic__user-left-icon" aria-label="user icon">
-                        <use href="assets/sprites.svg#user-icon"></use>
-                    </svg>
-                </div>
-                <div class="statistic__user-right statisticright">
-                    <h2 class="statistic__user-right-title statistic-title">90+</h2>
-                    <p class="statistic__user-right-desc statistic-desc">Users</p>
-                </div>
+          <div class="statistic__user">
+            <div class="statistic__user-left statistic-left">
+              <svg class="statistic__user-left-icon" aria-label="user icon">
+                <use href="assets/sprites.svg#user-icon"></use>
+              </svg>
             </div>
+            <div class="statistic__user-right statisticright">
+              <h2 class="statistic__user-right-title statistic-title">90+</h2>
+              <p class="statistic__user-right-desc statistic-desc">Users</p>
+            </div>
+          </div>
 
-                <div class="statistic__location">
-                    <div class="statistic__location-left statistic-left">
-                        <svg class="statistic__location-left-icon" aria-label="location icon">
-                            <use href="assets/sprites.svg#location-icon"></use>
-                        </svg>
-                    </div>
-                    <div class="statistic__location-right statistic-right">
-                        <h2 class="statistic__location-right-title statistic-title">30+</h2>
-                        <p class="statistic__location-right-desc statistic-desc">Locations</p>
-                    </div>
-                </div>
+          <div class="statistic__location">
+            <div class="statistic__location-left statistic-left">
+              <svg
+                class="statistic__location-left-icon"
+                aria-label="location icon"
+              >
+                <use href="assets/sprites.svg#location-icon"></use>
+              </svg>
+            </div>
+            <div class="statistic__location-right statistic-right">
+              <h2 class="statistic__location-right-title statistic-title">
+                30+
+              </h2>
+              <p class="statistic__location-right-desc statistic-desc">
+                Locations
+              </p>
+            </div>
+          </div>
 
-                    <div class="statistic__server">
-                        <div class="statistic__server-left statistic-left">  
-                            <svg class="statistic__server-left-icon" aria-label="server icon">
-                                <use href="assets/sprites.svg#server-icon"></use>
-                            </svg>
-                        </div>
-                        <div class="statistic__server-right statistic-right">
-                            <h2 class="statistic__server-right-title statistic-title">50+</h2>
-                            <p class="statistic__server-right-desc statistic-desc">Servers</p>
-                        </div>
-                    </div>
+          <div class="statistic__server">
+            <div class="statistic__server-left statistic-left">
+              <svg class="statistic__server-left-icon" aria-label="server icon">
+                <use href="assets/sprites.svg#server-icon"></use>
+              </svg>
+            </div>
+            <div class="statistic__server-right statistic-right">
+              <h2 class="statistic__server-right-title statistic-title">50+</h2>
+              <p class="statistic__server-right-desc statistic-desc">Servers</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -161,18 +168,101 @@
         <div class="features">
           <div class="features__bg"></div>
           <div class="features__points">
-            <h3 class="features__points-title">We Provide Many Features You Can Use</h3>
-            <p class="features__points-desc">You can explore the features that we provide with fun and have their own functions each feature.</p>
+            <h3 class="features__points-title">
+              We Provide Many Features You Can Use
+            </h3>
+            <p class="features__points-desc">
+              You can explore the features that we provide with fun and have
+              their own functions each feature.
+            </p>
             <ul class="features__points-list">
-              <li class="features__points-list-item">Powerfull online protection.</li>
-              <li class="features__points-list-item">Internet without borders.</li>
+              <li class="features__points-list-item">
+                Powerful online protection.
+              </li>
+              <li class="features__points-list-item">
+                Internet without borders.
+              </li>
               <li class="features__points-list-item">Supercharged VPN.</li>
-              <li class="features__points-list-item">No specific time limits.</li>
+              <li class="features__points-list-item">
+                No specific time limits.
+              </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
 
+    <section class="plan-section" aria-label="plan section">
+      <div class="container">
+        <div class="plan">
+          <h4 class="plan__title">Choose Your Plan</h4>
+          <p class="plan__desc">
+            Let's choose the package that is best for you and explore it happily
+            and cheerfully.
+          </p>
+          <div class="plan__cards-wrapper">
+            <figure class="plan-card card-free" aria-label="free plan">
+              <img
+                src="assets/webp/card_1.webp"
+                alt="plan icon"
+                class="plan-card__icon"
+              />
+              <h5 class="plan-card__title">Free Plan</h5>
+              <ul class="plan-card__list">
+                <li class="plan-card__list-item">Unlimited Bandwitch</li>
+                <li class="plan-card__list-item">Encrypted Connection</li>
+                <li class="plan-card__list-item">No Traffic Logs</li>
+                <li class="plan-card__list-item">Works on All Devices</li>
+              </ul>
+              <div class="plan-card__footer">
+                <p class="plan-card__footer-coast">Free</p>
+                <button class="plan-card__footer-button">Select</button>
+              </div>
+            </figure>
+
+            <figure class="plan-card card-standard" aria-label="standard plan">
+              <img
+                src="assets/webp/card_2.webp"
+                alt="plan icon"
+                class="plan-card__icon"
+              />
+              <h5 class="plan-card__title">Standard Plan</h5>
+              <ul class="plan-card__list">
+                <li class="plan-card__list-item">Unlimited Bandwitch</li>
+                <li class="plan-card__list-item">Encrypted Connection</li>
+                <li class="plan-card__list-item">Yes Traffic Logs</li>
+                <li class="plan-card__list-item">Works on All Devices</li>
+                <li class="plan-card__list-item">Connect Anyware</li>
+              </ul>
+              <div class="plan-card__footer">
+                <p class="plan-card__footer-coast">$9 <span>/ mo</span></p>
+                <button class="plan-card__footer-button">Select</button>
+              </div>
+            </figure>
+
+            <figure class="plan-card card-premium" aria-label="premium plan">
+              <img
+                src="assets/webp/card_3.webp"
+                alt="plan icon"
+                class="plan-card__icon"
+              />
+              <h5 class="plan-card__title">Premium Plan</h5>
+              <ul class="plan-card__list">
+                <li class="plan-card__list-item">Unlimited Bandwitch</li>
+                <li class="plan-card__list-item">Encrypted Connection</li>
+                <li class="plan-card__list-item">Yes Traffic Logs</li>
+                <li class="plan-card__list-item">Works on All Devices</li>
+                <li class="plan-card__list-item">Connect Anyware</li>
+                <li class="plan-card__list-item">Get New Features</li>
+              </ul>
+              <div class="plan-card__footer">
+                <p class="plan-card__footer-coast">$12 <span>/ mo</span></p>
+                <button class="plan-card__footer-button">Select</button>
+              </div>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
