--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <li class="plan-card__list-item">Encrypted Connection</li>
                 <li class="plan-card__list-item">Yes Traffic Logs</li>
                 <li class="plan-card__list-item">Works on All Devices</li>
-                <li class="plan-card__list-item">Connect Anyware</li>
+                <li class="plan-card__list-item">Connect Anywhere</li>
                 <li class="plan-card__list-item">Get New Features</li>
               </ul>
               <div class="plan-card__footer">
@@ -260,6 +260,52 @@
                 <button class="plan-card__footer-button">Select</button>
               </div>
             </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="globe-section" aria-label="globe section">
+      <div class="container">
+        <div class="globe">
+          <div class="globe__header">
+            <h6 class="globe__header-title">Huge Global Network of Fast VPN</h6>
+            <p class="globe__header-desc">
+              See <span>LaslesVPN</span> everywhere to make it easier for you
+              when you move locations.
+            </p>
+          </div>
+          <img
+            src="assets/webp/global_map.webp"
+            alt="global map"
+            class="globe__icon"
+          />
+          <div class="globe__products">
+            <img
+              src="assets/netflix.svg"
+              alt="netflix icon"
+              class="globe__products-icon"
+            />
+            <img
+              src="assets/reddit.svg"
+              alt="reddit icon"
+              class="globe__products-icon"
+            />
+            <img
+              src="assets/amazon.svg"
+              alt="amazon icon"
+              class="globe__products-icon"
+            />
+            <img
+              src="assets/discord.svg"
+              alt="discord icon"
+              class="globe__products-icon"
+            />
+            <img
+              src="assets/spotify.svg"
+              alt="spotify icon"
+              class="globe__products-icon"
+            />
           </div>
         </div>
       </div>
