--- a/index.html
+++ b/index.html
@@ -310,5 +310,72 @@
         </div>
       </div>
     </section>
+
+    <section class="testimonials-section" aria-label="testimonials section">
+    <div class="container">
+      <div class="testimonials">
+        <div class="testimonials__header">
+          <h6 class="testimonials__header-title" aria-label="testimonials title">Trusted by Thousands of Happy Customer</h6>
+          <p class="testimonials__header-desc">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
+        </div>
+        <div class="testimonials__slider">
+          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
+          <div class="slider-card__header">
+            <img src="assets/webp/user_icon_1.webp" alt="user icon" class="slider-card__header-icon">
+            <div class="slider-card__header-desc">
+              <h6 class="slider-card__header-desc-name" aria-label="name">Viezh Robert</h6>
+              <p class="slider-card__header-desc-location" aria-label="location">Warsaw, Poland</p>
+            </div>
+          </div>
+          <p class="slider-card__testimonial">“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+          </figure>
+
+          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
+          <div class="slider-card__header">
+            <img src="assets/webp/user_icon_2.webp" alt="user icon" class="slider-card__header-icon">
+            <div class="slider-card__header-desc">
+              <h6 class="slider-card__header-desc-name" aria-label="name">Yessica Christy</h6>
+              <p class="slider-card__header-desc-location" aria-label="location">Shanxi, China</p>
+            </div>
+          </div>
+          <p class="slider-card__testimonial">“I like it because I like to travel far and still can connect with high speed.”.</p>
+          </figure>
+
+          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
+          <div class="slider-card__header">
+            <img src="assets/webp/user_icon_3.webp" alt="user icon" class="slider-card__header-icon">
+            <div class="slider-card__header-desc">
+              <h6 class="slider-card__header-desc-name" aria-label="name">Kim Young Jou</h6>
+              <p class="slider-card__header-desc-location" aria-label="location">Seoul, South Korea</p>
+            </div>
+          </div>
+          <p class="slider-card__testimonial">“This is very unusual for my business that currently requires a virtual private network that has high security.”.</p>
+          </figure>
+
+        </div>
+
+        <div class="testimonials__footer">
+          <div class="testimonials__footer-points">
+            <div class="testimonials__footer-points-red"></div>
+            <div class="testimonials__footer-points-circle"></div>
+            <div class="testimonials__footer-points-circle"></div>
+            <div class="testimonials__footer-points-circle"></div>
+          </div>
+          <div class="testimonials__footer-switch">
+            <button class="testimonials__footer-switch-button" aria-label="switch button">
+              <svg class="testimonials__footer-switch-button-left">
+                <use href="assets/sprites.svg#arrow-icon"></use>
+              </svg>
+            </button>
+            <button class="testimonials__footer-switch-button" aria-label="switch button">
+              <svg class="testimonials__footer-switch-button-right">
+                <use href="assets/sprites.svg#arrow-icon"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
   </body>
 </html>
