--- a/index.html
+++ b/index.html
@@ -312,70 +312,236 @@
     </section>
 
     <section class="testimonials-section" aria-label="testimonials section">
+      <div class="container">
+        <div class="testimonials">
+          <div class="testimonials__header">
+            <h6
+              class="testimonials__header-title"
+              aria-label="testimonials title"
+            >
+              Trusted by Thousands of Happy Customer
+            </h6>
+            <p class="testimonials__header-desc">
+              These are the stories of our customers who have joined us with
+              great pleasure when using this crazy feature.
+            </p>
+          </div>
+          <div class="testimonials__slider">
+            <figure
+              class="testimonials__slider-card slider-card"
+              aria-label="slider card"
+            >
+              <div class="slider-card__header">
+                <img
+                  src="assets/webp/user_icon_1.webp"
+                  alt="user icon"
+                  class="slider-card__header-icon"
+                />
+                <div class="slider-card__header-desc">
+                  <h6 class="slider-card__header-desc-name" aria-label="name">
+                    Viezh Robert
+                  </h6>
+                  <p
+                    class="slider-card__header-desc-location"
+                    aria-label="location"
+                  >
+                    Warsaw, Poland
+                  </p>
+                </div>
+              </div>
+              <p class="slider-card__testimonial">
+                “Wow... I am very happy to use this VPN, it turned out to be
+                more than my expectations and so far there have been no
+                problems. LaslesVPN always the best”.
+              </p>
+            </figure>
+
+            <figure
+              class="testimonials__slider-card slider-card"
+              aria-label="slider card"
+            >
+              <div class="slider-card__header">
+                <img
+                  src="assets/webp/user_icon_2.webp"
+                  alt="user icon"
+                  class="slider-card__header-icon"
+                />
+                <div class="slider-card__header-desc">
+                  <h6 class="slider-card__header-desc-name" aria-label="name">
+                    Yessica Christy
+                  </h6>
+                  <p
+                    class="slider-card__header-desc-location"
+                    aria-label="location"
+                  >
+                    Shanxi, China
+                  </p>
+                </div>
+              </div>
+              <p class="slider-card__testimonial">
+                “I like it because I like to travel far and still can connect
+                with high speed.”.
+              </p>
+            </figure>
+
+            <figure
+              class="testimonials__slider-card slider-card"
+              aria-label="slider card"
+            >
+              <div class="slider-card__header">
+                <img
+                  src="assets/webp/user_icon_3.webp"
+                  alt="user icon"
+                  class="slider-card__header-icon"
+                />
+                <div class="slider-card__header-desc">
+                  <h6 class="slider-card__header-desc-name" aria-label="name">
+                    Kim Young Jou
+                  </h6>
+                  <p
+                    class="slider-card__header-desc-location"
+                    aria-label="location"
+                  >
+                    Seoul, South Korea
+                  </p>
+                </div>
+              </div>
+              <p class="slider-card__testimonial">
+                “This is very unusual for my business that currently requires a
+                virtual private network that has high security.”.
+              </p>
+            </figure>
+          </div>
+
+          <div class="testimonials__footer">
+            <div class="testimonials__footer-points">
+              <div class="testimonials__footer-points-red"></div>
+              <div class="testimonials__footer-points-circle"></div>
+              <div class="testimonials__footer-points-circle"></div>
+              <div class="testimonials__footer-points-circle"></div>
+            </div>
+            <div class="testimonials__footer-switch">
+              <button
+                class="testimonials__footer-switch-button"
+                aria-label="switch button"
+              >
+                <svg class="testimonials__footer-switch-button-left">
+                  <use href="assets/sprites.svg#arrow-icon"></use>
+                </svg>
+              </button>
+              <button
+                class="testimonials__footer-switch-button"
+                aria-label="switch button"
+              >
+                <svg class="testimonials__footer-switch-button-right">
+                  <use href="assets/sprites.svg#arrow-icon"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
+
+        
+            <div class="subscribe">
+              <div class="subscribe__wrapper">
+                <h6 class="subscribe__wrapper-title">
+                  Subscribe Now for Get Special Features!
+                </h6>
+                <p class="subscribe__wrapper-desc">
+                  Let's subscribe with us and find the fun.
+                </p>
+              </div>
+              <button class="subscribe__button">
+                <a href="#">Subscribe Now</a>
+              </button>
+            </div>
+          
+        </div>
+      </div>
+    </section>
+  </body>
+
+  <footer class="footer-section">
     <div class="container">
-      <div class="testimonials">
-        <div class="testimonials__header">
-          <h6 class="testimonials__header-title" aria-label="testimonials title">Trusted by Thousands of Happy Customer</h6>
-          <p class="testimonials__header-desc">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
-        </div>
-        <div class="testimonials__slider">
-          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
-          <div class="slider-card__header">
-            <img src="assets/webp/user_icon_1.webp" alt="user icon" class="slider-card__header-icon">
-            <div class="slider-card__header-desc">
-              <h6 class="slider-card__header-desc-name" aria-label="name">Viezh Robert</h6>
-              <p class="slider-card__header-desc-location" aria-label="location">Warsaw, Poland</p>
+      <div class="footer">
+        <div class="footer__contacts">
+          <div class="footer__contacts-header">
+            <svg class="footer__contacts-header-icon">
+              <use href="assets/sprites.svg#logo-icon"></use>
+            </svg>
+            <p class="footer__contacts-header-title">Lasles<span>VPN</span></p>
+          </div>
+          <p class="footer__contacts-desc">
+            <span>LaslesVPN</span> is a private virtual network that has unique
+            features and has high security.
+          </p>
+          <div class="footer__contacts-icons">
+            <div class="footer__contacts-icons-facebook">
+              <a href="#">
+                <svg class="footer__contacts-icons-facebook-logo">
+                  <use href="assets/sprites.svg#facebook-icon"></use>
+                </svg>
+              </a>
+            </div>
+            <div class="footer__contacts-icons-twitter">
+              <a href="#">
+                <svg class="footer__contacts-icons-twitter-logo">
+                  <use href="assets/sprites.svg#twitter-icon"></use>
+                </svg>
+              </a>
+            </div>
+            <div class="footer__contacts-icons-instagram">
+              <a href="">
+                <svg class="footer__contacts-icons-instagram-logo">
+                  <use href="assets/sprites.svg#instagram-icon"></use>
+                </svg>
+              </a>
             </div>
           </div>
-          <p class="slider-card__testimonial">“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-          </figure>
-
-          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
-          <div class="slider-card__header">
-            <img src="assets/webp/user_icon_2.webp" alt="user icon" class="slider-card__header-icon">
-            <div class="slider-card__header-desc">
-              <h6 class="slider-card__header-desc-name" aria-label="name">Yessica Christy</h6>
-              <p class="slider-card__header-desc-location" aria-label="location">Shanxi, China</p>
-            </div>
-          </div>
-          <p class="slider-card__testimonial">“I like it because I like to travel far and still can connect with high speed.”.</p>
-          </figure>
-
-          <figure class="testimonials__slider-card slider-card" aria-label="slider card">
-          <div class="slider-card__header">
-            <img src="assets/webp/user_icon_3.webp" alt="user icon" class="slider-card__header-icon">
-            <div class="slider-card__header-desc">
-              <h6 class="slider-card__header-desc-name" aria-label="name">Kim Young Jou</h6>
-              <p class="slider-card__header-desc-location" aria-label="location">Seoul, South Korea</p>
-            </div>
-          </div>
-          <p class="slider-card__testimonial">“This is very unusual for my business that currently requires a virtual private network that has high security.”.</p>
-          </figure>
-
+          <p class="footer__contacts-rights">©2020Lasles<span>VPN</span></p>
         </div>
 
-        <div class="testimonials__footer">
-          <div class="testimonials__footer-points">
-            <div class="testimonials__footer-points-red"></div>
-            <div class="testimonials__footer-points-circle"></div>
-            <div class="testimonials__footer-points-circle"></div>
-            <div class="testimonials__footer-points-circle"></div>
-          </div>
-          <div class="testimonials__footer-switch">
-            <button class="testimonials__footer-switch-button" aria-label="switch button">
-              <svg class="testimonials__footer-switch-button-left">
-                <use href="assets/sprites.svg#arrow-icon"></use>
-              </svg>
-            </button>
-            <button class="testimonials__footer-switch-button" aria-label="switch button">
-              <svg class="testimonials__footer-switch-button-right">
-                <use href="assets/sprites.svg#arrow-icon"></use>
-              </svg>
-            </button>
-          </div>
+        <div class="footer__product">
+          <h6 class="footer__product-title">Product</h6>
+          <ul class="footer__product-list">
+            <li class="footer__product-list-item"><a href="#">Download</a></li>
+            <li class="footer__product-list-item"><a href="#">Pricing</a></li>
+            <li class="footer__product-list-item"><a href="#">Locations</a></li>
+            <li class="footer__product-list-item"><a href="#">Server</a></li>
+            <li class="footer__product-list-item"><a href="#">Countries</a></li>
+            <li class="footer__product-list-item"><a href="#">Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__engage">
+          <h6 class="footer__engage-title">Engage</h6>
+          <ul class="footer__engage-list">
+            <li class="footer__engage-list-item">
+              <a href="#">LaslesVPN ? </a>
+            </li>
+            <li class="footer__engage-list-item"><a href="#">FAQ</a></li>
+            <li class="footer__engage-list-item"><a href="#">Tutorials</a></li>
+            <li class="footer__engage-list-item"><a href="#">About Us</a></li>
+            <li class="footer__engage-list-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+            <li class="footer__engage-list-item">
+              <a href="#">Terms of Service</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__others">
+          <h6 class="footer__others-title">Earn Money</h6>
+          <ul class="footer__others-list">
+            <li class="footer__others-list-item">
+              <a href="#">Affiliate</a>
+            </li>
+            <li class="footer__others-list-item">
+              <a href="#">Become Partner</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    </section>
-  </body>
+  </footer>
 </html>
